--- a/src/Workspaces/Core/Portable/xlf/WorkspacesResources.fr.xlf
+++ b/src/Workspaces/Core/Portable/xlf/WorkspacesResources.fr.xlf
@@ -52,6 +52,11 @@
         <target state="translated">Le document ne prend pas en charge les arborescences de syntaxe</target>
         <note />
       </trans-unit>
+      <trans-unit id="Error_reading_content_of_source_file_0_1">
+        <source>Error reading content of source file '{0}' -- '{1}'.</source>
+        <target state="new">Error reading content of source file '{0}' -- '{1}'.</target>
+        <note />
+      </trans-unit>
       <trans-unit id="Expression_level_preferences">
         <source>Expression-level preferences</source>
         <target state="translated">Préférences de niveau expression</target>
@@ -1340,6 +1345,11 @@ Les assertions arrière positives de largeur nulle sont généralement utilisée
       <trans-unit id="Warning_adding_imports_will_bring_an_extension_method_into_scope_with_the_same_name_as_member_access">
         <source>Adding imports will bring an extension method into scope with the same name as '{0}'</source>
         <target state="translated">L'ajout d'importations place une méthode d'extension dans l'étendue avec le même nom que « {0} »</target>
+        <note />
+      </trans-unit>
+      <trans-unit id="Workspace_error">
+        <source>Workspace error</source>
+        <target state="new">Workspace error</target>
         <note />
       </trans-unit>
       <trans-unit id="Workspace_is_not_empty">
