--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5924,4 +5924,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="ERR_VarianceInterfaceNesting" xml:space="preserve">
     <value>Enums, classes, and structures cannot be declared in an interface that has an 'in' or 'out' type parameter.</value>
   </data>
+  <data name="ERR_ExternEventInitializer" xml:space="preserve">
+    <value>'{0}': extern event cannot have initializer</value>
+  </data>
 </root>
