--- a/src/VisualStudio/Core/Def/ServicesVSResources.resx
+++ b/src/VisualStudio/Core/Def/ServicesVSResources.resx
@@ -1358,5 +1358,6 @@ I agree to all of the foregoing:</value>
   </data>
   <data name="LiveShare_CSharp_Visual_Basic_Language_Server_Client" xml:space="preserve">
     <value>LiveShare C#/Visual Basic Language Server Client</value>
+    <comment>'LiveShare' is a product name and does not need to be localized.</comment>
   </data>
 </root>
