--- a/src/Features/Core/Portable/xlf/FeaturesResources.de.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.de.xlf
@@ -83,13 +83,13 @@
         <note />
       </trans-unit>
       <trans-unit id="Awaited_task_returns_0">
-        <source>Awaited task returns {0}</source>
-        <target state="new">Awaited task returns {0}</target>
+        <source>Awaited task returns '{0}'</source>
+        <target state="new">Awaited task returns '{0}'</target>
         <note />
       </trans-unit>
       <trans-unit id="Awaited_task_returns_no_value">
-        <source>Awaited task returns no value.</source>
-        <target state="new">Awaited task returns no value.</target>
+        <source>Awaited task returns no value</source>
+        <target state="new">Awaited task returns no value</target>
         <note />
       </trans-unit>
       <trans-unit id="CannotApplyChangesUnexpectedError">
