--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5951,4 +5951,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="ERR_ImplicitRangeIndexerWithName" xml:space="preserve">
     <value>Invocation of implicit Range Indexer cannot name the argument.</value>
   </data>
+  <data name="ERR_DesignatorBeneathPatternCombinator" xml:space="preserve">
+    <value>A variable may not be declared within a 'not' or 'or' pattern.</value>
+  </data>
 </root>
